# vscode-cpp-cmake-test03

./: CMakeLists.txt
application/: CMakeLists.txt
application/src/: main.cpp
extern_libs/: CMakeLists.txt
extern_libs/lib_a/: CMakeLists.txt
extern_libs/lib_a/includes/: a1.h
extern_libs/lib_a/src/: a1.cpp
extern_libs/lib_b/: CMakeLists.txt
